--- a/zach.bib
+++ b/zach.bib
@@ -258,7 +258,7 @@
   date = {2007-06},
   journaltitle = {Annals of Pure and Applied Logic},
   volume = {147},
-  number = {1-2},
+  number = {1--2},
   eprint = {ZACFGL},
   eprinttype = {philpapers},
   pages = {23--47},
@@ -479,7 +479,7 @@
 }
 
 @incollection{Bernays2012,
-  title = {Axiomatic Investigations of the Propositional Calculus of {{{\emph{Principia Mathematica}}}}},
+  title = {Axiomatic Investigations of the Propositional Calculus of {{{\mkbibemph{Principia Mathematica}}}}},
   booktitle = {Universal {{Logic}}: {{An Anthology}}},
   author = {Bernays, Paul},
   editor = {B\'eziau, Jean-Yves},
@@ -674,7 +674,7 @@
 }
 
 @article{HajekZach1994,
-  title = {Review of {{{\emph{Many-valued Logics}}}}{\emph{: 1.~}}{{{\emph{Theoretical Foundations}}}}, by {{Leonard Bolc}} and {{Piotr Borowik}} ({{Springer}}, {{Berlin}}, 1991)},
+  title = {Review of {{{\mkbibemph{Many-valued Logics}}}}{\mkbibemph{: 1.~}}{{{\mkbibemph{Theoretical Foundations}}}}, by {{Leonard Bolc}} and {{Piotr Borowik}} ({{Springer}}, {{Berlin}}, 1991)},
   author = {H\'ajek, Petr and Zach, Richard},
   date = {1994},
   journaltitle = {Journal of Applied Non-Classical Logics},
@@ -699,7 +699,7 @@
 }
 
 @book{MagnusButtonLoftisThomas-BolducEtAl2019,
-  title = {Forall {\emph{x}}: {{Calgary}}. {{An}} Introduction to Formal Logic},
+  title = {Forall {\mkbibemph{x}}: {{Calgary}}. {{An}} Introduction to Formal Logic},
   author = {Magnus, P. D. and Button, Tim and Loftis, J. Robert and Thomas-Bolduc, Aaron and Trueman, Robert and Zach, Richard},
   date = {2021},
   edition = {F21},
@@ -712,19 +712,7 @@
 }
 
 @book{MagnusButtonLoftisThomas-BolducEtAl2021,
-  title = {Forall {\emph{x}}: {{Dortmund}}. {{Eine Einf\"uhrung}} in Die Formale {{Logik}}},
-  author = {Magnus, P. D. and Button, Tim and Loftis, J. Robert and Thomas-Bolduc, Aaron and Trueman, Robert and Zach, Richard},
-  translator = {{Wimmer, Simon}},
-  date = {2021},
-  publisher = {Open Logic Project},
-  location = {Dortmund},
-  url = {https://tu-dortmund.sciebo.de/s/PAZYaqD7Nekt8LC},
-  keywords = {textbook},
-  file = {/home/zach/Documents/bib/Magnus et al - 2021 - forall ix-i - Dortmund. Eine Einführung in die formale Logik.pdf}
-}
-
-@book{MagnusButtonLoftisThomas-BolducEtAl2021a,
-  title = {Para Tod\emph{x}s Natal. Uma introdu\c c\~ao \`a l\'ogica formal},
+  title = {Para Tod\mkbibemph{x}s Natal. Uma introdu\c c\~ao \`a l\'ogica formal},
   author = {Magnus, P. D. and Button, Tim and Loftis, J. Robert and Thomas-Bolduc, Aaron and Trueman, Robert and Zach, Richard},
   translator = {{Daniel Durante} and {Maria da Paz Nunes de Medeiros} and {Ricardo Gentil de Ara\'ujo Pereira}},
   date = {2021},
@@ -734,6 +722,18 @@
   langid = {portuguese},
   keywords = {textbook},
   file = {/home/zach/Documents/bib/Magnus et al - 2021 - Para Todix-is Natal. Uma introdução à lógica formal.pdf}
+}
+
+@book{MagnusButtonLoftisThomas-BolducEtAl2021a,
+  title = {Forall {\mkbibemph{x}}: {{Dortmund}}. {{Eine Einf\"uhrung}} in Die Formale {{Logik}}},
+  author = {Magnus, P. D. and Button, Tim and Loftis, J. Robert and Thomas-Bolduc, Aaron and Trueman, Robert and Zach, Richard},
+  translator = {{Wimmer, Simon}},
+  date = {2021},
+  publisher = {Open Logic Project},
+  location = {Dortmund},
+  url = {https://tu-dortmund.sciebo.de/s/PAZYaqD7Nekt8LC},
+  keywords = {textbook},
+  file = {/home/zach/Documents/bib/Magnus et al - 2021 - forall ix-i - Dortmund. Eine Einführung in die formale Logik.pdf}
 }
 
 @book{MancosuGalvanZach2021,
@@ -827,7 +827,7 @@
   doi = {10.1093/acprof:oso/9780195137316.003.0029},
   scholar = {1143733837172903405,3867834122282040128},
   keywords = {chapter},
-  annotation = {Reprinted in Paolo Mancosu, \emph{The Adventure of Reason. Interplay Between Philosophy of Mathematics and Mathematical Logic, 1900--1940}. Oxford: Oxford University Press, 2010},
+  annotation = {Reprinted in Paolo Mancosu, \mkbibemph{The Adventure of Reason. Interplay Between Philosophy of Mathematics and Mathematical Logic, 1900--1940}. Oxford: Oxford University Press, 2010},
   file = {/home/zach/Documents/bib/Mancosu et al. - 2009 - The development of mathematical logic from Russell.pdf}
 }
 
@@ -871,7 +871,7 @@
   keywords = {abstract}
 }
 
-@software{SalzerKatzenbeisserStefanKralAndreasLeitgebEtAl2022,
+@software{SalzerKatzenbeisserStefanKralAndreasLeitgebEtAl2023,
   title = {{{MUltlog}}},
   author = {Salzer, Gernot and Katzenbeisser, Stefan and {Stefan Kral} and {Andreas Leitgeb} and {Richard Zach}},
   date = {2023-07-03},
@@ -1053,7 +1053,7 @@
 }
 
 @article{Zach2002a,
-  title = {Review of {{{\emph{Computability}}}}{\emph{. }}{{{\emph{Computable Functions}}}}{\emph{, }}{{{\emph{Logic}}}}{\emph{, and the }}{{{\emph{Foundations}}}}{\emph{ of }}{{{\emph{Mathematics}}}}, 2nd {{Edition}}, by {{Richard L}}. {{Epstein}} and {{Walter A}}. {{Carnielli}} ({{Wadsworth}}, 2000)},
+  title = {Review of {{{\mkbibemph{Computability}}}}{\mkbibemph{. }}{{{\mkbibemph{Computable Functions}}}}{\mkbibemph{, }}{{{\mkbibemph{Logic}}}}{\mkbibemph{, and the }}{{{\mkbibemph{Foundations}}}}{\mkbibemph{ of }}{{{\mkbibemph{Mathematics}}}}, 2nd {{Edition}}, by {{Richard L}}. {{Epstein}} and {{Walter A}}. {{Carnielli}} ({{Wadsworth}}, 2000)},
   author = {Zach, Richard},
   date = {2002},
   journaltitle = {History and Philosophy of Logic},
@@ -1110,7 +1110,7 @@
 }
 
 @article{Zach2003b,
-  title = {Review of {{{\emph{Computability}}}}{\emph{ and }}{{{\emph{Logic}}}}, 4th {{Edition}}, by {{George Boolos}}, {{John Burgess}}, and {{Richard Jeffrey}} ({{Cambridge}}, 2002)},
+  title = {Review of {{{\mkbibemph{Computability}}}}{\mkbibemph{ and }}{{{\mkbibemph{Logic}}}}, 4th {{Edition}}, by {{George Boolos}}, {{John Burgess}}, and {{Richard Jeffrey}} ({{Cambridge}}, 2002)},
   author = {Zach, Richard},
   date = {2003},
   journaltitle = {Bulletin of Symbolic Logic},
@@ -1140,7 +1140,7 @@
 }
 
 @article{Zach2004a,
-  title = {Hilbert's `{{{\emph{Verungl\"uckter Beweis}}}}', the First Epsilon Theorem, and Consistency Proofs},
+  title = {Hilbert's `{{{\mkbibemph{Verungl\"uckter Beweis}}}}', the First Epsilon Theorem, and Consistency Proofs},
   author = {Zach, Richard},
   date = {2004-05},
   journaltitle = {History and Philosophy of Logic},
@@ -1187,7 +1187,7 @@
 }
 
 @article{Zach2005a,
-  title = {Review of {{{\emph{Reason}}}}{\emph{'s }}{{{\emph{Nearest Kin}}}}{\emph{: }}{{{\emph{Philosophies}}}}{\emph{ of }}{{{\emph{Arithmetic From Kant}}}}{\emph{ to }}{{{\emph{Carnap}}}} by {{Michael Potter}} ({{Oxford University Press}}, 2000)},
+  title = {Review of {{{\mkbibemph{Reason}}}}{\mkbibemph{'s }}{{{\mkbibemph{Nearest Kin}}}}{\mkbibemph{: }}{{{\mkbibemph{Philosophies}}}}{\mkbibemph{ of }}{{{\mkbibemph{Arithmetic From Kant}}}}{\mkbibemph{ to }}{{{\mkbibemph{Carnap}}}} by {{Michael Potter}} ({{Oxford University Press}}, 2000)},
   author = {Zach, Richard},
   date = {2005},
   journaltitle = {Notre Dame Journal of Formal Logic},
@@ -1203,7 +1203,7 @@
 }
 
 @article{Zach2005b,
-  title = {Review of {{{\emph{G\"odel}}}}{\emph{'s }}{{{\emph{Theorem}}}}{\emph{: }}{{{\emph{Its Use}}}}{\emph{ and }}{{{\emph{Abuse}}}}, by {{Torkel Franz\'en}} ({{AK Peters}}, 2005)},
+  title = {Review of {{{\mkbibemph{G\"odel}}}}{\mkbibemph{'s }}{{{\mkbibemph{Theorem}}}}{\mkbibemph{: }}{{{\mkbibemph{Its Use}}}}{\mkbibemph{ and }}{{{\mkbibemph{Abuse}}}}, by {{Torkel Franz\'en}} ({{AK Peters}}, 2005)},
   author = {Zach, Richard},
   date = {2005-11},
   journaltitle = {History and Philosophy of Logic},
@@ -1568,6 +1568,20 @@
 }
 
 @incollection{Zach2022a,
+  title = {Hilbert and {{Ackermann}}'s Calculus (1928)},
+  booktitle = {Encyclopaedia of {{Proof Systems}}},
+  author = {Zach, Richard},
+  editor = {Woltzenlogel Paleo, Bruno and Reis, Giselle},
+  date = {2022},
+  edition = {3},
+  pages = {10},
+  publisher = {College Publications},
+  location = {London},
+  langid = {english},
+  keywords = {other}
+}
+
+@incollection{Zach2022b,
   title = {Hilbert's Axiomatic Calculus (1917)},
   booktitle = {Encyclopaedia of {{Proof Systems}}},
   author = {Zach, Richard},
@@ -1580,20 +1594,6 @@
   langid = {english},
   keywords = {other},
   file = {/home/zach/Documents/bib/Zach - 2022 - Hilbert's axiomatic calculus (1917).pdf}
-}
-
-@incollection{Zach2022b,
-  title = {Hilbert and {{Ackermann}}'s Calculus (1928)},
-  booktitle = {Encyclopaedia of {{Proof Systems}}},
-  author = {Zach, Richard},
-  editor = {Woltzenlogel Paleo, Bruno and Reis, Giselle},
-  date = {2022},
-  edition = {3},
-  pages = {10},
-  publisher = {College Publications},
-  location = {London},
-  langid = {english},
-  keywords = {other}
 }
 
 @article{Zach2023,
