separate out books

--- a/zach.bib
+++ b/zach.bib
@@ -744,7 +744,7 @@
   location = {Oxford},
   doi = {10.1093/oso/9780192895936.001.0001},
   scholar = {7516380201479157719},
-  keywords = {short,textbook},
+  keywords = {book,short},
   file = {/home/zach/Documents/bib/Mancosu et al - 2021 - An introduction to proof theory - normalization, cut-elimination, and.pdf}
 }
 
@@ -758,7 +758,7 @@
   isbn = {978-2-7116-3091-2},
   langid = {french},
   pagetotal = {588},
-  keywords = {textbook},
+  keywords = {book},
   file = {/home/zach/tex/tdlivre/Mancosu et al. - 2022 - Introduction à la théorie de la démonstration Éli.pdf}
 }
 
