--- a/template-cv-zach.tex
+++ b/template-cv-zach.tex
@@ -90,7 +90,8 @@ $endfor$
   \subsection{#1}}
 
 \begin{publications}
-  \printbibrz{textbook}{Books}
+  \printbibrz{book}{Books}
+  \printbibrz{textbook}{Open Textbooks}
   \printbibrz{edition}{Editions}
   \printbibrz{article}{Journal Articles}
   \printbibrz{chapter}{Book Chapters}
